templates/hola_template.yaml
---
# Source: hola/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-hola
  labels:
    helm.sh/chart: hola-0.1.1
    app.kubernetes.io/name: hola
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hola
    app.kubernetes.io/instance: release-name
---
# Source: hola/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-hola
  labels:
    helm.sh/chart: hola-0.1.1
    app.kubernetes.io/name: hola
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hola
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hola
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: hola
          securityContext:
            {}
          image: "dther/web-app-flux:v0.4"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: hola/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-hola
  labels:
    helm.sh/chart: hola-0.1.1
    app.kubernetes.io/name: hola
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "hola-qa.opslab.local"
      http:
        paths:
          - path: /
            backend:
              service:
                name: release-name-hola
                port: 
                  number: 80
---
# Source: hola/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-hola-test-connection"
  labels:
    helm.sh/chart: hola-0.1.1
    app.kubernetes.io/name: hola
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.17.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['release-name-hola:80']
  restartPolicy: Never
